mengubah tampilan dan ui
background gradasi, perubahan pada footer, UI pada Navbar

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#prestasi">Prestasi</a>
+              <a class="nav-link" href="#prestasi">Achievement</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#project">project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#social">Social Media</a>
+              <a class="nav-link" href="#footer">Social Media</a>
             </li>
           </ul>
         </div>
@@ -51,40 +51,26 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="image/1659939816644.jpg" alt="Its Me" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4" data-aos="fade-left" data-aos-duration="1500">Manik Yogantara</h1>
-      <p class="lead" data-aos="fade-right" data-aos-duration="1500">Mahasiswa | Teknik Informatika</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,192L21.8,165.3C43.6,139,87,85,131,64C174.5,43,218,53,262,80C305.5,107,349,149,393,170.7C436.4,192,480,192,524,170.7C567.3,149,611,107,655,90.7C698.2,75,742,85,785,106.7C829.1,128,873,160,916,181.3C960,203,1004,213,1047,192C1090.9,171,1135,117,1178,85.3C1221.8,53,1265,43,1309,53.3C1352.7,64,1396,96,1418,112L1440,128L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
-        ></path>
-      </svg>
+      <h1 class="display-4 text-light" data-aos="fade-left" data-aos-duration="1500">Manik Yogantara</h1>
+      <p class="lead text-light" data-aos="fade-right" data-aos-duration="1500">Mahasiswa | Teknik Informatika</p>
     </section>
     <!-- end jumbutron -->
 
     <!-- about -->
     <section id="about">
       <div class="container">
-        <div class="row text-center mb-3" data-aos="zoom-out" data-aos-duration="1500">
+        <div class="row text-center mb-3 text-light" data-aos="zoom-out" data-aos-duration="1500">
           <div class="col">
             <h2>About me</h2>
           </div>
         </div>
         <div class="row justify-content-between text-center fs-5">
-          <div class="col text-center" data-aos="fade-up" data-aos-duration="1500">
+          <div class="col text-center text-light" data-aos="fade-up" data-aos-duration="1500">
             Hai...perkenalkan nama saya Ketut Manik Yogantara. Saya biasa di panggil Manik. Saya tinggal di Bali tepatnya di kabupaten Buleleng. Saya merupakan mahasiswa Jurusan Teknik Informatika di UNDIKSHA. Hobi saya adalah bermain Game
             dan mendengarkan musik. Saya juga suka mempelajari hal baru seperti membuat musik, mengedit sebuah video,animasi 3d dan lainya
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#a5c9ca"
-          fill-opacity="1"
-          d="M0,256L30,240C60,224,120,192,180,181.3C240,171,300,181,360,192C420,203,480,213,540,229.3C600,245,660,267,720,266.7C780,267,840,245,900,208C960,171,1020,117,1080,128C1140,139,1200,213,1260,250.7C1320,288,1380,288,1410,288L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- end about -->
 
@@ -92,12 +78,12 @@
     <section id="prestasi">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col" data-aos="zoom-in" data-aos-duration="1000">
+          <div class="col text-light" data-aos="zoom-in" data-aos-duration="1000">
             <h2>Achievement</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-5 mb-3">
+          <div class="col-md-4 mb-3">
             <div class="card text-center" data-aos="fade-up" data-aos-duration="1500">
               <img src="image/prestasi.jpg" class="card-img-top" alt="prestasi" />
               <div class="card-body">
@@ -109,13 +95,6 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,160L26.7,170.7C53.3,181,107,203,160,208C213.3,213,267,203,320,176C373.3,149,427,107,480,90.7C533.3,75,587,85,640,112C693.3,139,747,181,800,213.3C853.3,245,907,267,960,240C1013.3,213,1067,139,1120,133.3C1173.3,128,1227,192,1280,208C1333.3,224,1387,192,1413,176L1440,160L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- end prestasi -->
 
@@ -123,7 +102,7 @@
     <section id="project">
       <div class="container">
         <div class="row text-center">
-          <div class="col" data-aos="fade-down" data-aos-duration="1500">
+          <div class="col text-light" data-aos="fade-down" data-aos-duration="1500">
             <h2>Project</h2>
           </div>
         </div>
@@ -164,33 +143,24 @@
           </button>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#a5c9ca"
-          fill-opacity="1"
-          d="M0,256L34.3,213.3C68.6,171,137,85,206,69.3C274.3,53,343,107,411,128C480,149,549,139,617,144C685.7,149,754,171,823,176C891.4,181,960,171,1029,181.3C1097.1,192,1166,224,1234,208C1302.9,192,1371,128,1406,96L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
-        ></path>
-      </svg>
     </section>
 
     <!-- end projcet -->
 
-    <!-- contact -->
-    <section id="social">
-      <div class="social fs-1 text-center" data-aos="zoom-in" data-aos-duration="1500">
-        <h2>Social Media</h2>
-        <a class="tombol" href="https://www.facebook.com/yogantara.yoga.3/"><i class="fab fa-facebook-f" data-aos="fade-right" data-aos-duration="1500"></i></a>
-        <a class="tombol" href="https://instagram.com/ktmnk._?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram" data-aos="fade-down" data-aos-duration="1500"></i></a>
-        <a class="tombol" href="https://www.youtube.com/channel/UCd7AFwxYn2ARo-iLVgIzvHw"><i class="fab fa-youtube" data-aos="fade-up" data-aos-duration="1500"></i></a>
-        <a class="tombol" href="https://bit.ly/3derod1"><i class="fab fa-whatsapp" data-aos="fade-left" data-aos-duration="1500"></i></a>
-      </div>
-    </section>
-    <!-- end contact -->
-
     <!-- footer -->
-    <footer class="text-center text-light">
-      <p>created by ManikEzTzySlebew</p>
-    </footer>
+    <section id="footer">
+      <footer class="text-center text-light">
+        <div class="social fs-1 text-start text-info" data-aos="zoom-in" data-aos-duration="1500">
+          <h2>Social Media</h2>
+          <a class="tombol" href="https://www.facebook.com/yogantara.yoga.3/"><i class="fab fa-facebook-f" data-aos="fade-right" data-aos-duration="1500"></i></a>
+          <a class="tombol" href="https://instagram.com/ktmnk._?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram" data-aos="fade-down" data-aos-duration="1500"></i></a>
+          <a class="tombol" href="https://www.youtube.com/channel/UCd7AFwxYn2ARo-iLVgIzvHw"><i class="fab fa-youtube" data-aos="fade-up" data-aos-duration="1500"></i></a>
+          <a class="tombol" href="https://bit.ly/3derod1"><i class="fab fa-whatsapp" data-aos="fade-left" data-aos-duration="1500"></i></a>
+        </div>
+        <p>created by ManikEzTzySlebew</p>
+      </footer>
+    </section>
+
     <!-- end footer -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
