fix bug in android
fix bug

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#project">project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Social Media</a>
+              <a class="nav-link" href="#social">Social Media</a>
             </li>
           </ul>
         </div>
@@ -59,8 +59,8 @@
     <!-- about -->
     <section id="about">
       <div class="container">
-        <div class="row text-center mb-3 text-light" data-aos="zoom-out" data-aos-duration="1500">
-          <div class="col">
+        <div class="row text-center mb-3" data-aos="zoom-out" data-aos-duration="1500">
+          <div class="col text-light">
             <h2>About me</h2>
           </div>
         </div>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-5 mb-3">
             <div class="card text-center" data-aos="fade-up" data-aos-duration="1500">
               <img src="image/prestasi.jpg" class="card-img-top" alt="prestasi" />
               <div class="card-body">
@@ -147,20 +147,23 @@
 
     <!-- end projcet -->
 
+    <!-- contact -->
+
+    <!-- end contact -->
+
     <!-- footer -->
-    <section id="footer">
-      <footer class="text-center text-light">
-        <div class="social fs-1 text-start text-info" data-aos="zoom-in" data-aos-duration="1500">
+    <footer class="text-center text-light" data-aos="fade-up" data-aos-duration="1500">
+      <section id="social">
+        <div class="social fs-1 text-info" data-aos="zoom-in" data-aos-duration="1500">
           <h2>Social Media</h2>
           <a class="tombol" href="https://www.facebook.com/yogantara.yoga.3/"><i class="fab fa-facebook-f" data-aos="fade-right" data-aos-duration="1500"></i></a>
           <a class="tombol" href="https://instagram.com/ktmnk._?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram" data-aos="fade-down" data-aos-duration="1500"></i></a>
           <a class="tombol" href="https://www.youtube.com/channel/UCd7AFwxYn2ARo-iLVgIzvHw"><i class="fab fa-youtube" data-aos="fade-up" data-aos-duration="1500"></i></a>
           <a class="tombol" href="https://bit.ly/3derod1"><i class="fab fa-whatsapp" data-aos="fade-left" data-aos-duration="1500"></i></a>
         </div>
-        <p>created by ManikEzTzySlebew</p>
-      </footer>
-    </section>
-
+      </section>
+      <p>created by ManikEzTzySlebew</p>
+    </footer>
     <!-- end footer -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
