update number whatsapp

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a class="tombol" href="https://www.facebook.com/yogantara.yoga.3/"><i class="fab fa-facebook-f" data-aos="fade-right" data-aos-duration="1500"></i></a>
           <a class="tombol" href="https://instagram.com/ktmnk._?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram" data-aos="fade-down" data-aos-duration="1500"></i></a>
           <a class="tombol" href="https://www.youtube.com/channel/UCd7AFwxYn2ARo-iLVgIzvHw"><i class="fab fa-youtube" data-aos="fade-up" data-aos-duration="1500"></i></a>
-          <a class="tombol" href="https://bit.ly/3derod1"><i class="fab fa-whatsapp" data-aos="fade-left" data-aos-duration="1500"></i></a>
+          <a class="tombol" href="https://wa.link/cbgpbw"><i class="fab fa-whatsapp" data-aos="fade-left" data-aos-duration="1500"></i></a>
         </div>
       </section>
       <p>created by ManikEzTzySlebew</p>
